# web-sw-cor24-assembler

./: CHANGES.md  CLAUDE.md  Cargo.toml  README.md  Trunk.toml  build.sh  index.html  serve.sh
rust-to-cor24/: Cargo.toml  README.md  build.rs
rust-to-cor24/demos/: generate-all.sh
rust-to-cor24/demos/demo_add/: Cargo.toml  demo_add.msp430.s
rust-to-cor24/demos/demo_blinky/: Cargo.toml  demo_blinky.cor24.s  demo_blinky.msp430.s
rust-to-cor24/demos/demo_button_echo/: Cargo.toml  demo_button_echo.cor24.s  demo_button_echo.msp430.s
rust-to-cor24/demos/demo_countdown/: Cargo.toml  demo_countdown.cor24.s  demo_countdown.msp430.s
rust-to-cor24/demos/demo_echo/: demo_echo.msp430.s
rust-to-cor24/demos/demo_echo_v2/: demo_echo_v2.cor24.s  demo_echo_v2.msp430.s
rust-to-cor24/demos/demo_fibonacci/: Cargo.toml  demo_fibonacci.cor24.s  demo_fibonacci.msp430.s
rust-to-cor24/demos/demo_fibonacci_iter/: Cargo.toml  demo_fibonacci_iter.cor24.s  demo_fibonacci_iter.msp430.s
rust-to-cor24/demos/demo_nested/: Cargo.toml  demo_nested.msp430.s
rust-to-cor24/demos/demo_panic/: Cargo.toml  demo_panic.cor24.s  demo_panic.msp430.s
rust-to-cor24/demos/demo_stack_vars/: Cargo.toml  demo_stack_vars.cor24.s  demo_stack_vars.msp430.s
rust-to-cor24/docs/: planned-simplest.md  possible-futures.md
rust-to-cor24/output/: demo_add.cor24.s  demo_blinky.cor24.s  demo_button_echo.cor24.s  demo_countdown.cor24.s  demo_fibonacci.cor24.s  demo_nested.cor24.s  demo_stack_vars.cor24.s  demo_uart_hello.cor24.s
rust-to-cor24/src/: lib.rs  msp430.rs  msp430_cli.rs  pipeline.rs  run.rs
(+146 files in other folders)
