[package]
name = "web-sw-cor24-assembler"
version = "0.1.0"
edition = "2024"
authors = ["Michael A Wright"]
license = "MIT"
description = "COR24 Assembly Emulator — Web IDE"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["standalone"]
standalone = []

[dependencies]
cor24-emulator = { path = "../sw-cor24-emulator" }
cor24-assembler = { path = "../sw-cor24-x-assembler" }
components = { path = "./components" }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["console"] }
gloo = "0.11"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
thiserror = "2.0"

[profile.release]
opt-level = "z"
lto = true
