[package]
name = "wasm2cor24"
version = "0.1.0"
edition = "2021"
description = "Translate WASM to COR24 assembly"

[workspace]
exclude = ["examples/blink", "demos/demo_echo"]

[dependencies]
wasmparser = "0.121"
anyhow = "1.0"
cor24-emulator = { path = ".." }
libc = "0.2"

[[bin]]
name = "wasm2cor24"
path = "src/main.rs"

[[bin]]
name = "msp430-to-cor24"
path = "src/msp430_cli.rs"

[[bin]]
name = "cor24-run"
path = "src/run.rs"

[dev-dependencies]
